--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "antd": "^4.18.1",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
+    "dotenv": "^10.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
