--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kimyerimweb/intertalk#readme",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.1",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
@@ -32,6 +33,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "reset-css": "^5.0.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
